Fixed media object on mobile

--- a/src/render/assets/scss/_media.scss
+++ b/src/render/assets/scss/_media.scss
@@ -6,14 +6,16 @@
   }
 }
 
-.media,
-.media-body {
-  zoom: 1;
-  overflow: hidden;
-}
+@media screen and (min-width: 600px) {
+  .media,
+  .media-body {
+    zoom: 1;
+    overflow: hidden;
+  }
 
-.media-body {
-  width: 10000px;
+  .media-body {
+    width: 10000px;
+  }
 }
 
 .media-object {
@@ -35,11 +37,13 @@
   padding-right: 10px;
 }
 
-.media-left,
-.media-right,
-.media-body {
-  display: table-cell;
-  vertical-align: top;
+@media screen and (min-width: 600px) {
+  .media-left,
+  .media-right,
+  .media-body {
+    display: table-cell;
+    vertical-align: top;
+  }
 }
 
 .media-middle {
